--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,9 @@
       <li>
         <%= link_to("ログイン", "/login") %>
       </li>
+      <li>
+        <%= link_to("test", "/login") %>
+      </li>
       <% end %>
     </ul>
   </header>
