--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -113,6 +113,10 @@
   color: #afb6bf;
 }
 
+.line-chart{
+  width: 100%;
+}
+
 /* users/new, users/edit ================================ */
 .users-form input {
   margin-bottom: 15px;
