--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,4 +1,11 @@
 /* posts/index ================================ */
+.posts-heading{
+  text-align: center;
+  font-weight: 300;
+  margin: 60px 0 20px;
+  font-size: 40px;
+  color: #bcc8d4;
+}
 .posts-index-wrapper {
   padding: 20px 30px;
   background-color: white;
