--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,6 @@
 <div class="main posts-index">
   <div class="container">
+  <h2 class="posts-heading">みんなのフィットネス近況</h2>
     <% @posts.each do |post| %>
     <div class="posts-index-wrapper">
       <div class="posts-index-item">
