--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,6 +11,7 @@
         <%= form_tag("/posts/create", {multipart: true}) do %>
         <p>記録日</p>
         <input type="text" name="recording_date" value="<%= params[:recording_date] %>">
+        <%= form_for.date_field %>
         <p>体重</p>
         <input type="text" name="body_weight" value="<%= params[:body_weight] %>">
         <p>体脂肪率</p>
