--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -175,9 +175,10 @@ header {
 }
 
 .form-heading {
+  text-align: center;
   font-weight: 300;
   margin: 60px 0 20px;
-  font-size: 48px;
+  font-size: 40px;
   color: #bcc8d4;
 }
 
