--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,37 +18,37 @@
   <header>
     <div class="header-logo">
       <% if @current_user %>
-      <%= link_to("FitnessTrajectory", "/posts/index") %>
+      <%= link_to "FitnessTrajectory", posts_path %>
       <% else %>
-      <%= link_to("FitnessTrajectory", "/") %>
+      <%= link_to "FitnessTrajectory", root_path %>
       <% end %>
     </div>
     <ul class="header-menus">
       <% if @current_user %>
       <li>
-        <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
+        <%= link_to @current_user.name, user_path(@current_user) %>
       </li>
       <li>
-        <%= link_to("投稿一覧", "/posts/index") %>
+        <%= link_to "投稿一覧", posts_path %>
       </li>
       <li>
-        <%= link_to("ユーザー一覧", "/users/index") %>
+        <%= link_to "ユーザー一覧", users_path %>
       </li>
       <li>
-        <%= link_to("新規投稿", "/posts/new") %>
+        <%= link_to "新規投稿", new_post_path %>
       </li>
       <li>
-        <%= link_to("ログアウト", "/logout", {method: "post"}) %>
+        <%= link_to "ログアウト", logout_path, method: "post" %>
       </li>
       <% else %>
       <li>
-        <%= link_to("FitnessTrajectoryとは", "/about") %>
+        <%= link_to "FitnessTrajectoryとは", about_path %>
       </li>
       <li>
-        <%= link_to("新規ユーザー登録", "/signup") %>
+        <%= link_to "新規ユーザー登録", signup_path %>
       </li>
       <li>
-        <%= link_to("ログイン", "/login") %>
+        <%= link_to "ログイン", login_path %>
       </li>
       <% end %>
     </ul>
