--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
           <img src="<%= "/user_images/#{post.user.icon_image_name}" %>">
         </div>
         <div class="post-center">
-          <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+          <%= link_to post.user.name, user_path(post.user) %>
           <div class="post-user-name">
           </div>
           <ul>
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="post-menus">
-        <%= link_to("詳細ページへ", "/posts/#{post.id}") %>
+        <%= link_to "詳細ページへ", post_path(post) %>
       </div>
     </div>
     <% end %>
