--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,7 +8,7 @@
             <%= message %>
           </div>
         <% end %>
-        <%= form_tag("/users/#{@user.id}/update", {multipart: true}) do %>
+        <%= form_tag user_path(@user), method: "patch", multipart: true do %>
         <p>ユーザー名</p>
         <input type="text" name="name" value="<%= @user.name %>">
         <p>メールアドレス</p>
