--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,19 +1,10 @@
 <div class="main user-show">
   <div class="container">
-    <div class="user">
-      <img src="<%= "/user_images/#{@user.icon_image_name}" %>">
-      <h2><%= @user.name %></h2>
-      <p><%= @user.email %></p>
-      <% if @user.id == @current_user.id %>
-      <%= link_to("編集", "/users/#{@user.id}/edit") %>
-      <% end %>
-    </div>
-
+    <%= render "shared/userinfo" %>
     <ul class="user-tabs">
-      <li><%= link_to("投稿", "/users/#{@user.id}") %></li>
-      <li class="active"><%= link_to("いいね!", "/users/#{@user.id}/likes") %></li>
+      <li><%= link_to "投稿", user_path(@user)  %></li>
+      <li class="active"><%= link_to "いいね!", "/users/#{@user.id}/likes" %></li>
     </ul>
-
     <% @likes.each do |like| %>
     <% post = Post.find_by(id: like.post_id) %>
     <div class="posts-index-wrapper">
@@ -22,7 +13,7 @@
           <img src="<%= "/user_images/#{post.user.icon_image_name}" %>">
         </div>
         <div class="post-center">
-          <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+          <%= link_to post.user.name, user_path(post.user) %>
           <div class="post-user-name">
           </div>
           <ul>
@@ -43,7 +34,7 @@
         </div>
       </div>
       <div class="post-menus">
-        <%= link_to("詳細ページへ", "/posts/#{post.id}") %>
+        <%= link_to "詳細ページへ", post_path(post) %>
       </div>
     </div>
     <% end %>
