--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
             <%= message %>
           </div>
       <% end %>
-      <%= form_tag("/users/create") do %>
+      <%= form_tag users_path do %>
         <p>ユーザー名</p>
         <input type="text" name="name" value="<%= params[:name] %>">
         <p>メールアドレス</p>
