--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,24 +8,24 @@
             <%= message %>
           </div>
         <% end %>
-        <%= form_tag user_path(@user), method: "patch", multipart: true do %>
-        <p>ユーザー名</p>
-        <input type="text" name="name" value="<%= @user.name %>">
-        <p>メールアドレス</p>
-        <input type="text" name="email" value="<%= @user.email %>">
-        <p>パスワード</p>
-        <input type="password" name="password" value="<%= @user.password %>">
-        <p>性別</p>
-        <%= select_tag(:gender, options_for_select([["男性",1], ["女性",2]], @user.gender.to_i)) %>
-        <p>身長</p>
-        <input type="text" name="height" value="<%= @user.user_height %>">
-        <p>生年月日</p>
-        <input type="text" name="birthday" value="<%= @user.birthday %>">
-        <p>アイコン</p>
-        <input type="file" name="icon_image" value="<%= @user.icon_image_name %>">
-        <p>紹介文</p>
-        <textarea name="description"><%= @user.description %></textarea>
-        <input type="submit" value="保存">
+        <%= form_with(model: @user, local: true) do |f| %>
+        <%= f.label "ユーザー名" %>
+        <%= f.text_field :name %>
+        <%= f.label "メールアドレス" %>
+        <%= f.text_field :email %>
+        <%= f.label "パスワード" %>
+        <%= f.password_field :password %>
+        <%= f.label "性別" %>
+        <%= f.select :gender,  {"男性": 1, "女性": 2}, { include_blank: '選択してください'} %>
+        <%= f.label "身長" %>
+        <%= f.text_field :user_height %>
+        <%= f.label "生年月日" %>
+        <%= f.date_field :birthday %>
+        <%= f.label "アイコン" %>
+        <%= f.file_field :icon_image_name %>
+        <%= f.label "紹介文" %>
+        <%= f.text_area :description %>
+        <%= f.submit "保存" %>
         <% end %>
       </div>
     </div>
