--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,27 +3,27 @@
     <div class="form-heading">新規ユーザー登録</div>
     <div class="form users-form">
       <div class="form-body">
-      <% @user.errors.full_messages.each do |message| %>
-          <div class="form-error">
-            <%= message %>
-          </div>
-      <% end %>
-      <%= form_tag users_path do %>
-        <p>ユーザー名</p>
-        <input type="text" name="name" value="<%= params[:name] %>">
-        <p>メールアドレス</p>
-        <input type="text" name="email" value="<%= params[:email] %>">
-        <p>パスワード</p>
-        <input type="password" name="password" value="<%= params[:password] %>">
-        <p>性別</p>
-        <%= select_tag(:gender, options_for_select([["男性",1], ["女性",2]], @user.gender.to_i)) %>
-        <p>身長</p>
-        <input type="text" name="height" value="<%= params[:height] %>">
-        <p>生年月日</p>
-        <input type="text" name="birthday" value="<%= params[:birthday] %>">
-        <input type="submit" value="新規登録">
-      <% end %>
-    </div>
+        <% @user.errors.full_messages.each do |message| %>
+        <div class="form-error">
+          <%= message %>
+        </div>
+        <% end %>
+        <%= form_with(model: @user, local: true) do |f| %>
+        <%= f.label "ユーザー名" %>
+        <%= f.text_field :name %>
+        <%= f.label "メールアドレス" %>
+        <%= f.text_field :email %>
+        <%= f.label "パスワード" %>
+        <%= f.password_field :password %>
+        <%= f.label "性別" %>
+        <%= f.select :gender,  {"男性": 1, "女性": 2}, { include_blank: '選択してください'} %>
+        <%= f.label "身長" %>
+        <%= f.text_field :user_height %>
+        <%= f.label "生年月日" %>
+        <%= f.date_field :birthday %>
+        <%= f.submit "新規登録" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
