--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,68 +1,72 @@
 /* posts/index ================================ */
-.posts-heading{
-  text-align: center;
-  font-weight: 300;
-  margin: 60px 0 20px;
-  font-size: 40px;
-  color: #bcc8d4;
-}
-.posts-index-wrapper {
-  padding: 20px 30px;
-  background-color: white;
-  overflow: hidden;
-  box-shadow: 0 2px 6px #c1ced7;
-  .posts-index-item {
-    display: flex;
-    .post-left {
-      width: 10%;
-      img {
-        width: 50px;
-        height: 50px;
-        border-radius: 40%;
-        box-shadow: 0 2px 6px #c1ced7;
-        object-fit: cover;
-      }
-    }
-    .post-center {
-      width: 55%;
-      padding-left: 25px;
-      text-align: left;
-      .post-user-name {
-        a {
-          font-weight: 600;
-        }
-        a:hover {
-          color: #3367D6;
-        }
-      }
-    }
-    .post-right {
-      width: 35%;
-      .post-image-wrapper {
-        padding: 10px;
-        text-align: center;
-        .post-image {
-          width: 150px;
-        }
-      }
-    }
-  }
-  .post-menus {
-    float: right;
-    a,input {
-      color: #8899a6;
-      text-decoration: underline;
-      font-size: 14px;
-      padding-right: 10px;
+.posts-index{
+  .posts-index-content{
+    display: inline-block;
+    .posts-heading{
+      text-align: center;
+      font-weight: 300;
+      margin: 20px 0;
+      font-size: 40px;
+      color: gray;
     }
   }
 }
+    .posts-index-wrapper {
+      padding: 20px 30px;
+      background-color: white;
+      overflow: hidden;
+      box-shadow: 0 2px 6px #c1ced7;
+      .posts-index-item {
+        display: flex;
+        .post-left {
+          width: 10%;
+          img {
+            width: 50px;
+            height: 50px;
+            border-radius: 40%;
+            box-shadow: 0 2px 6px #c1ced7;
+            object-fit: cover;
+          }
+        }
+        .post-center {
+          width: 55%;
+          padding-left: 25px;
+          text-align: left;
+          .post-user-name {
+            a {
+              font-weight: 600;
+            }
+            a:hover {
+              color: #3367D6;
+            }
+          }
+        }
+        .post-right {
+          width: 35%;
+          .post-image-wrapper {
+            padding: 10px;
+            text-align: center;
+            .post-image {
+              width: 150px;
+            }
+          }
+        }
+      }
+      .post-menus {
+        float: right;
+        a,input {
+          color: #8899a6;
+          text-decoration: underline;
+          font-size: 14px;
+          padding-right: 10px;
+        }
+      }
+    }
 
 /* posts/show ================================ */
 .posts-show form {
   display: inline;
 }
-
 .posts-show-item {
   padding: 30px;
   background-color: white;
