--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,48 +1,50 @@
 /* users/index ================================ */
 .users-index {
-  .users-heading {
-    text-align: center;
-    font-weight: 300;
-    margin: 60px 0 20px;
-    font-size: 40px;
-    color: #bcc8d4;
-  }
-
-  .users-index-item {
-    padding: 20px 30px;
-    background-color: white;
-    overflow: hidden;
-    box-shadow: 0 2px 6px #c1ced7;
-    display: table;
-    width: 100%;
-    .user-left {
-      float: left;
-      width: 10%;
-      img {
-        width: 50px;
-        height: 50px;
-        border-radius: 40%;
-        box-shadow: 0 2px 6px #c1ced7;
-        object-fit: cover;
-      }
+  .user-index-content{
+    display: inline-block;
+    .users-heading {
+      text-align: center;
+      font-weight: 300;
+      margin: 20px 0;
+      font-size: 40px;
+      color: gray;
     }
-    .user-right {
-      width: 90%;
-      padding-left: 25px;
-      text-align: left;
-      display: table-cell;
-      vertical-align: middle;
-      .user-name {
-        a {
-          font-weight: 600;
-          font-size: 16px;
-        }
-        a:hover {
-          color: #3367d6;
+    .users-index-item {
+      padding: 20px 30px;
+      background-color: white;
+      overflow: hidden;
+      box-shadow: 0 2px 6px #c1ced7;
+      display: table;
+      width: 100%;
+      .user-left {
+        float: left;
+        width: 10%;
+        img {
+          width: 50px;
+          height: 50px;
+          border-radius: 40%;
+          box-shadow: 0 2px 6px #c1ced7;
+          object-fit: cover;
         }
       }
-      p {
-        font-size: 14px;
+      .user-right {
+        width: 90%;
+        padding-left: 25px;
+        text-align: left;
+        display: table-cell;
+        vertical-align: middle;
+        .user-name {
+          a {
+            font-weight: 600;
+            font-size: 16px;
+          }
+          a:hover {
+            color: #3367d6;
+          }
+        }
+        p {
+          font-size: 14px;
+        }
       }
     }
   }
@@ -50,94 +52,89 @@
 
 /* users/show ================================ */
 .user-show {
-  // text-align: center;
-  .user {
-    padding: 0 30px 20px 30px;
-    .user-wrapper{
-      display: flex;
-      .user-left{
-        img {
-          width: 120px;
-          height: 120px;
-          border-radius: 40%;
-          box-shadow: 0 2px 6px #c1ced7;
-          margin: 20px 0 10px 30px;
-          object-fit: cover;
+  .user-show-content{
+    display: inline-block;
+    .user {
+      padding: 0 30px;
+      .user-wrapper{
+        display: flex;
+        .user-left{
+          img {
+            width: 120px;
+            height: 120px;
+            border-radius: 40%;
+            box-shadow: 0 2px 6px #c1ced7;
+            margin: 20px 0 10px 30px;
+            object-fit: cover;
+          }
+        }
+        .user-right{
+          padding-left: 40px;
+          text-align: left;
+          h2 {
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 1.2;
+            margin: 20px 0 10px 0;
+          }
+          p {
+            font-size: 15px;
+            margin-bottom: 2px;
+          }
+        }
+        span {
+          color: #afb6bf;
+          font-weight: 200;
+          padding: 0 6px 0 8px;
         }
       }
-      .user-right{
-        padding-left: 40px;
-        text-align: left;
-        h2 {
-          font-size: 20px;
-          font-weight: 600;
-          line-height: 1.2;
-          margin: 20px 0 10px 0;
-        }
-        p {
-          font-size: 15px;
-          margin-bottom: 2px;
+      .user-bottom{
+        padding-top: 15px;
+        p{
+          text-align: left;
         }
       }
-      span {
-        color: #afb6bf;
+      a {
+        color: #8899a6;
+        text-decoration: underline;
         font-weight: 200;
-        padding: 0 6px 0 8px;
+        display: block;
+        text-align: right;
       }
     }
-    .user-bottom{
-      padding-top: 15px;
-    }
-    a {
-      color: #8899a6;
-      text-decoration: underline;
-      font-weight: 200;
-      display: block;
-      text-align: right;
-    }
-  }
-  .chart-wrapper{
-    text-align: center;
-    h3{
-      padding: 15px 0;
+    .chart-wrapper{
+      text-align: center;
+      h3{
+        padding: 15px 0;
+      }
     }
   }
 }
-
-
-
-
-
-
-
-.user-tabs {
+      
+      .user-tabs {
   margin-top: 40px;
   background-color: white;
   overflow: hidden;
   box-shadow: 0 2px 6px #c1ced7;
+  li {
+    float: left;
+  }
+  li.active {
+    border-bottom: 2px solid #3367d6;
+    a {
+      color: #57575f;
+    }
+  }
+  a {
+    display: inline-block;
+    padding: 16px 30px;
+    color: #afb6bf;
+  }
 }
-
-.user-tabs li {
-  float: left;
-}
-
-.user-tabs li.active {
-  border-bottom: 2px solid #3367d6;
-}
-
-.user-tabs li.active a {
-  color: #57575f;
-}
-
-.user-tabs a {
-  display: inline-block;
-  padding: 16px 30px;
-  color: #afb6bf;
-}
-
 .line-chart{
   width: 100%;
 }
+
 
 /* users/new, users/edit ================================ */
 .users-form input {
