--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,42 +1,48 @@
 <div class="main posts-index">
   <div class="container">
-    <h2 class="posts-heading">みんなのフィットネス近況</h2>
-    <div class="btn-wrapper">
-      <%= link_to new_post_path do %>
-      <button class="blue-btn">＋ 投稿する</button>
-      <% end %>
-    </div>
-    <% @posts.each do |post| %>
-    <div class="posts-index-wrapper">
-      <div class="posts-index-item">
-        <div class="post-left">
-          <img src="<%= "/user_images/#{post.user.icon_image_name}" %>">
-        </div>
-        <div class="post-center">
-          <%= link_to post.user.name, user_path(post.user) %>
-          <div class="post-user-name">
-          </div>
-          <ul>
-            <li>投稿日：<%= post.recording_date %></li>
-            <li>体重：<%= post.body_weight %>kg</li>
-            <li>体脂肪率：<%= post.body_fat_percentage %>%</li>
-            <li>トレーニングメニュー：<%= post.training_menu %></li>
-            <li>食事メニュー：<%= post.meal_menu %></li>
-            <li>総摂取カロリー：<%= post.total_calorie %>kcal</li>
-          </ul>
-        </div>
-        <div class="post-right">
-          <% if post.post_image_name != nil %>
-          <div class="post-image-wrapper">
-            <img class="post-image" src="<%= "/post_images/#{post.post_image_name}" %>">
-          </div>
+    <div class="background-white">
+      <div class="posts-index-content">
+        <h2 class="posts-heading">みんなのフィットネス近況</h2>
+        <div class="btn-wrapper">
+          <%= link_to new_post_path do %>
+          <button class="blue-btn">＋ 投稿する</button>
           <% end %>
         </div>
-      </div>
-      <div class="post-menus">
-        <%= link_to "詳細ページへ", post_path(post) %>
+        <% @posts.each do |post| %>
+        <div class="posts-index-wrapper">
+          <div class="posts-index-item">
+            <%= link_to user_path(post.user) do %>
+            <div class="post-left">
+              <img src="<%= "/user_images/#{post.user.icon_image_name}" %>">
+            </div>
+            <% end %>
+            <div class="post-center">
+              <%= link_to post.user.name, user_path(post.user) %>
+              <div class="post-user-name">
+              </div>
+              <ul>
+                <li>投稿日：<%= post.recording_date %></li>
+                <li>体重：<%= post.body_weight %>kg</li>
+                <li>体脂肪率：<%= post.body_fat_percentage %>%</li>
+                <li>トレーニングメニュー：<%= post.training_menu %></li>
+                <li>食事メニュー：<%= post.meal_menu %></li>
+                <li>総摂取カロリー：<%= post.total_calorie %>kcal</li>
+              </ul>
+            </div>
+            <div class="post-right">
+              <% if post.post_image_name != nil %>
+              <div class="post-image-wrapper">
+                <img class="post-image" src="<%= "/post_images/#{post.post_image_name}" %>">
+              </div>
+              <% end %>
+            </div>
+          </div>
+          <div class="post-menus">
+            <%= link_to "詳細ページへ", post_path(post) %>
+          </div>
+        </div>
+        <% end %>
       </div>
     </div>
-    <% end %>
   </div>
 </div>
