--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,28 @@
 <div class="main users-index">
   <div class="container">
-    <h1 class="users-heading">ユーザー一覧</h1>
-    <% @users.each do |user| %>
-    <div class="users-index-item">
-      <div class="user-left">
-        <img src="<%="/user_images/#{user.icon_image_name}"%>">
-      </div>
-      <div class="user-right">
-        <div class="user-name">
-          <%= link_to user.name, user_path(user) %>
+    <div class="background-white">
+      <div class="user-index-content">
+        <h1 class="users-heading">ユーザー一覧</h1>
+        <% @users.each do |user| %>
+        <div class="users-index-item">
+          <%= link_to user_path(user) do %>
+          <div class="user-left">
+            <img src="<%="/user_images/#{user.icon_image_name}"%>">
+          </div>
+          <% end %>
+          <div class="user-right">
+            <div class="user-name">
+              <%= link_to user.name, user_path(user) %>
+            </div>
+            <% if user.gender == "1" %>
+            <p><%= "男性  #{user.age}歳  #{user.user_height}cm" %></p>
+            <% else %>
+            <p><%= "女性  #{user.age}歳  #{user.user_height}cm" %></p>
+            <% end %>
+          </div>
         </div>
-        <% if user.gender == "1" %>
-        <p><%= "男性  #{user.age}歳  #{user.user_height}cm" %></p>
-        <% else %>
-        <p><%= "女性  #{user.age}歳  #{user.user_height}cm" %></p>
         <% end %>
       </div>
     </div>
-    <% end %>
   </div>
 </div>
