--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,20 +1,22 @@
 <div class="main users-new">
   <div class="container">
-    <div class="form-heading">ログイン</div>
-    <div class="form users-form">
-      <div class="form-body">
-      <% if @error_message %>
+    <div class="background-white">
+      <div class="form-heading">ログイン</div>
+      <div class="form users-form">
+        <div class="form-body">
+          <% if @error_message %>
           <div class="form-error">
             <%= @error_message %>
           </div>
-        <% end %>
-        <%= form_tag login_path do %>
-        <p>メールアドレス</p>
-        <input type="text" name="email" value="<%= @email %>">
-        <p>パスワード</p>
-        <input type="password" name="password" value="<%= @password %>">
-        <input type="submit" value="ログイン">
-        <% end %>
+          <% end %>
+          <%= form_tag login_path do %>
+          <p>メールアドレス</p>
+          <input type="text" name="email" value="<%= @email %>">
+          <p>パスワード</p>
+          <input type="password" name="password" value="<%= @password %>">
+          <input type="submit" value="ログイン">
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
