--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,30 @@
 <div class="main users-new">
   <div class="container">
-    <div class="form-heading">新規ユーザー登録</div>
-    <div class="form users-form">
-      <div class="form-body">
-        <% @user.errors.full_messages.each do |message| %>
-        <div class="form-error">
-          <%= message %>
+    <div class="background-white">
+      <div class="form-heading">新規ユーザー登録</div>
+      <div class="form users-form">
+        <div class="form-body">
+          <% @user.errors.full_messages.each do |message| %>
+          <div class="form-error">
+            <%= message %>
+          </div>
+          <% end %>
+          <%= form_with(model: @user, local: true) do |f| %>
+          <%= f.label "ユーザー名" %>
+          <%= f.text_field :name %>
+          <%= f.label "メールアドレス" %>
+          <%= f.text_field :email %>
+          <%= f.label "パスワード" %>
+          <%= f.password_field :password %>
+          <%= f.label "性別" %>
+          <%= f.select :gender,  {"男性": 1, "女性": 2}, { include_blank: '選択してください'} %>
+          <%= f.label "身長" %>
+          <%= f.text_field :user_height %>
+          <%= f.label "生年月日" %>
+          <%= f.date_field :birthday %>
+          <%= f.submit "新規登録" %>
+          <% end %>
         </div>
-        <% end %>
-        <%= form_with(model: @user, local: true) do |f| %>
-        <%= f.label "ユーザー名" %>
-        <%= f.text_field :name %>
-        <%= f.label "メールアドレス" %>
-        <%= f.text_field :email %>
-        <%= f.label "パスワード" %>
-        <%= f.password_field :password %>
-        <%= f.label "性別" %>
-        <%= f.select :gender,  {"男性": 1, "女性": 2}, { include_blank: '選択してください'} %>
-        <%= f.label "身長" %>
-        <%= f.text_field :user_height %>
-        <%= f.label "生年月日" %>
-        <%= f.date_field :birthday %>
-        <%= f.submit "新規登録" %>
-        <% end %>
       </div>
     </div>
   </div>
