--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -21,6 +21,15 @@
       letter-spacing: 2px;
       border-radius: 2px;
     }
+    .form-integer{
+      display: flex;
+      width: 50%;
+      p{
+        margin-left: 7px;
+        font-size: 16px;
+        padding-top: 15px;
+      }
+    }
     textarea {
       width: 100%;
       min-height: 110px;
