--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,6 +1,7 @@
 
 /* top ================================ */
 .top-main {
+
   padding: 200px 0 100px;
   text-align: center;
   position: absolute;
@@ -9,38 +10,58 @@
   height: auto;
   min-height: 100%;
   color: white;
+
+  .top-wrapper{
+    background-color: rgba(99, 99, 99, 0.5);
+    border-radius: 10px;
+    padding: 30px;
+  max-width: 900px;
+  margin:0 auto;
+
+  a{
+    color: white;
+    text-decoration: underline;
+  }
+  .top-message {
+    position: relative;
+  }
   h2 {
-    font-size: 70px;
+    font-size: 60px;
     font-weight: 500;
     line-height: 1.3;
     -webkit-font-smoothing: antialiased;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
-  p {
-    font-size: 24px;
+  h3 {
+    font-size: 28px;
+    font-weight: 400;
+  }
+  .top-about{
+    margin-top: 50px;
+    margin-bottom: 40px;
+    a{
+      font-size: 19px;
+      font-weight: 350;
+    }
+  }
+  .top-signup{
+    button{
+      background-color: #3367D6;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      margin: 20px 0;
+      font-size: 24px;
+      padding:10px 40px;
+    }
+  }
+  .top-login{
+    margin-top: 5px;
+    a{
+      font-size: 16px;
+      font-weight: 350;
+    }
   }
 }
-
-.top-message {
-  position: relative;
 }
 
-
-/* about ================================ */
-.about-main {
-  padding: 180px 8% 0;
-  color: white;
-  h2 {
-    font-size: 64px;
-    font-weight: 500;
-    line-height: 1.4;
-  }
-  p {
-    font-weight: 200;
-    font-size: 20px;
-  }
-}
-
-.about-img {
-  width: 84%;
-}
