--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,13 +1,13 @@
 <div class="about-main">
-  <div class="about-header">
     <h2>FitnessTrajectoryとは</h2>
-    <p><span>フィットネスの記録を投稿するSNSです。<br>フィットネスに関してこんなお悩みを抱えている人は多いのではないでしょうか？</span></p>
-    <ul><span>
-      <li><span>モチベーションが続かなくてフィットネスがなかなか継続できない...</span></li>
+  <div class="about-header">
+    <p>フィットネスの記録を投稿するSNSです。<br>フィットネスに関してこんなお悩みを抱えている人は多いのではないでしょうか？</p>
+    <ul>
+      <li>モチベーションが続かなくてフィットネスがなかなか継続できない...</li>
       <li>かっこいい身体の人がどんなトレーニングをしているのか気になる...</li>
       <li>ボディメイクに適した食事管理を知りたい...</li>
       <li>フィットネスの成果を把握して今後に活かしたい...</li>
-    </span></ul>
+    </ul>
     <p>FitnessTrajectoryはこのようなお悩みを解決するために生まれました。<br>
       具体的には以下のような機能があります。</p>
   </div>
@@ -65,14 +65,14 @@
     </div>
   </div>
   <div class="about-bottom">
-    <p>さぁ、みんなとフィットネスの状況をシェアしてモチベーションを高め合い<br>理想のカラダを手に入れましょう！</p>
+    <p><span>さぁ、みんなとフィットネスの状況をシェアしてモチベーションを高め合い<br>理想のカラダを手に入れましょう！</span></p>
     <div class="about-signup">
       <%= link_to signup_path do %>
       <button class="blue-btn">新規ユーザー登録</button>
       <% end %>
     </div>
     <div class="about-login">
-      <%= link_to "アカウントをお持ちの方はこちらからログイン", login_path %>
+      <span><%= link_to "アカウントをお持ちの方はこちらからログイン", login_path %></span>
     </div>
   </div>
 </div>
