--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="main posts-index">
+<div class="posts-index">
   <div class="container">
     <div class="background-white">
       <div class="posts-index-content">
