--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="main posts-show">
+<div class="posts-show">
   <div class="container">
     <div class="posts-show-item">
       <div class="post-user-name">
