--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="main user-edit">
+<div class="user-edit">
   <div class="container">
     <div class="background-white">
       <div class="user-edit-content">
