--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="main users-index">
+<div class="users-index">
   <div class="container">
     <div class="background-white">
       <div class="user-index-content">
