--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,4 +1,4 @@
-<div class="main user-show">
+<div class="user-show">
   <div class="container">
     <div class="background-white">
       <div class="user-show-content">
