--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class="main users-new">
+<div class="users-new">
   <div class="container">
     <div class="background-white">
       <div class="form-heading">新規ユーザー登録</div>
