--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,5 +1,6 @@
 /* posts/index ================================ */
 .posts-index{
+  padding-top: 64px;
   .posts-index-content{
     display: inline-block;
     .posts-heading{
@@ -139,6 +140,10 @@
 }
 
 /* posts/new ================================ */
+.posts-new{
+  padding-top: 64px;
+}
+
 .posts-new textarea {
   font-size: 20px;
   padding: 10px;
