--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,67 +1,74 @@
 
 /* top ================================ */
 .top-main {
-
   padding: 200px 0 100px;
   text-align: center;
-  position: absolute;
-  top: 0;
   width: 100%;
   height: auto;
   min-height: 100%;
   color: white;
-
-  .top-wrapper{
+  span{
     background-color: rgba(99, 99, 99, 0.5);
-    border-radius: 10px;
-    padding: 30px;
-  max-width: 900px;
-  margin:0 auto;
-
-  a{
-    color: white;
-    text-decoration: underline;
   }
-  .top-message {
-    position: relative;
-  }
-  h2 {
-    font-size: 60px;
-    font-weight: 500;
-    line-height: 1.3;
-    -webkit-font-smoothing: antialiased;
-    margin-bottom: 15px;
-  }
-  h3 {
-    font-size: 28px;
-    font-weight: 400;
-  }
-  .top-about{
-    margin-top: 50px;
-    margin-bottom: 40px;
+  .top-wrapper{
+    max-width: 900px;
+    margin:0 auto;
     a{
-      font-size: 19px;
-      font-weight: 350;
-    }
-  }
-  .top-signup{
-    button{
-      background-color: #3367D6;
       color: white;
-      border: none;
-      border-radius: 8px;
-      margin: 20px 0;
-      font-size: 24px;
-      padding:10px 40px;
+      text-decoration: underline;
+    }
+    .top-message {
+      position: relative;
+    }
+    h2 {
+      font-size: 60px;
+      font-weight: 500;
+      line-height: 1.3;
+      -webkit-font-smoothing: antialiased;
+      margin-bottom: 15px;
+    }
+    h3 {
+      font-size: 28px;
+      font-weight: 400;
+    }
+    .top-about{
+      margin-top: 50px;
+      margin-bottom: 40px;
+      a{
+        font-size: 19px;
+        font-weight: 350;
+      }
+    }
+    .top-signup{
+      button{
+        background-color: #3367D6;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        margin: 20px 0;
+        font-size: 24px;
+        padding:10px 40px;
+      }
+    }
+    .top-login{
+      margin-top: 5px;
+      a{
+        font-size: 16px;
+        font-weight: 350;
+      }
     }
   }
-  .top-login{
-    margin-top: 5px;
-    a{
-      font-size: 16px;
-      font-weight: 350;
-    }
-  }
-}
 }
 
+
+/* top ================================ */
+
+  .contact-content, .terms-content{
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 264px;
+    padding-bottom: 200px;
+    max-width: 900px;
+    color: white;
+    font-size: 24px;
+  }
