--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="main posts-new">
+<div class="posts-new">
   <div class="container">
     <div class="background-white">
       <div class="posts-edit-content">
